--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
              SLIDE 1: TITLE
         ========================== -->
         <section>
+          <p>23f3000704@ds.study.iitm.ac.in</p>
           <h2>Q3 2025 Quarterly Earnings</h2>
           <h4>Interactive Financial Overview</h4>
           <p class="brand">Global Banking & Markets Division</p>
