--- a/index.html
+++ b/index.html
@@ -1,266 +1,172 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>Q3 Quarterly Earnings – Interactive Report</title>
+<!doctype html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <title>Quarterly Earnings Report 23f3004197@ds.study.iitm.ac.in</title>
 
-    <!-- RevealJS core + theme (CDN) -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/reveal.js@4.5.0/dist/reveal.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/reveal.js@4.5.0/dist/theme/white.css"
-      id="theme"
-    />
+  <!-- Reveal.js CSS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js/dist/reveal.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js/dist/theme/beige.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js/plugin/highlight/monokai.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex/dist/katex.min.css">
 
-    <!-- Code highlighting theme -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/reveal.js@4.5.0/plugin/highlight/monokai.css"
-    />
+  <style>
+    /* Custom styling */
+    .metric {
+      font-size: 2em;
+      font-weight: bold;
+      color: #2c3e50;
+    }
+    .chart-container {
+      width: 90%;
+      height: 400px;
+      margin: auto;
+    }
+  </style>
+</head>
+<body>
+  <div class="reveal">
+    <div class="slides">
 
-    <style>
-      /* Simple custom styling */
-      .brand {
-        font-size: 0.7em;
-        color: #666;
-      }
+      <!-- Title Slide -->
+      <section>
+        <h1>Quarterly Earnings Report</h1>
+        <h3>Technical Consultant Presentation</h3>
+        <span style="display:none;">This course is shit</span>
+        <aside class="notes">
+          Introduction to self and objective of the quarterly earnings presentation.
+        </aside>
+      </section>
 
-      .kpi {
-        font-size: 1.4em;
-        font-weight: bold;
-      }
+      <!-- Key Highlights Slide (Markdown) -->
+      <section data-markdown>
+        <textarea data-template>
+## Key Highlights
 
-      .email {
-        margin-top: 20px;
-        font-size: 0.8em;
-      }
-    </style>
-  </head>
+- Revenue grew by **12% YoY**
+- Net Profit increased by **8%**
+- Customer base expanded by **5%**
+- Operational costs reduced by **3%**
+        </textarea>
+        <aside class="notes">
+          Present high-level metrics first. Each bullet can be animated using fragments.
+        </aside>
+      </section>
 
-  <body>
-    <div class="reveal">
-      <div class="slides">
-        <!-- =========================
-             SLIDE 1: TITLE
-        ========================== -->
+      <!-- Animated Metrics Slide -->
+      <section>
+        <h2>Revenue Breakdown</h2>
+        <ul>
+          <li class="fragment">Product A: <span class="metric">$4.5M</span></li>
+          <li class="fragment">Product B: <span class="metric">$3.2M</span></li>
+          <li class="fragment">Product C: <span class="metric">$2.8M</span></li>
+        </ul>
+        <aside class="notes">
+          Reveal each product revenue step by step.
+        </aside>
+      </section>
+
+      <!-- Interactive Chart Slide -->
+      <section>
+        <h2>Revenue & Profit Over Quarters</h2>
+        <canvas id="revenueChart" class="chart-container"></canvas>
+        <aside class="notes">
+          Explain trends using the chart. Highlight Q3 performance spike.
+        </aside>
+      </section>
+
+      <!-- Code Slide: ROI Calculation -->
+      <section>
+        <h2>Python Code: Calculating ROI</h2>
+        <pre><code class="language-python">
+def roi(gain, cost):
+    return (gain - cost) / cost * 100
+
+gain = 500000
+cost = 350000
+print(f"ROI: {roi(gain, cost)}%")
+        </code></pre>
+        <aside class="notes">
+          Demonstrate ROI calculation programmatically.
+        </aside>
+      </section>
+
+      <!-- Financial Formula Slide -->
+      <section>
+          <h3>Financial Formulas (MathJax)</h3>
+          <p>Weighted Average Cost of Capital (WACC):</p>
+          <p>\[ \text{WACC} = \frac{E}{V} r_e + \frac{D}{V} r_d (1 - T) \]</p>
+          <p>Discounted Cash Flow (perpetuity with growth):</p>
+          <p>\[ \text{Value} = \frac{\text{FCF}_1}{r - g} \]</p>
+          <p>Earnings Per Share (EPS): \( \displaystyle EPS = \frac{\text{Net Income}}{\text{Weighted Avg. Shares}} \)</p>
+          <h2>Statistical Formula</h2>
+  \[P(A|B) = \frac{P(B|A)P(A)}{P(B)}\]
+          <aside class="notes">Explain each variable: E (equity), D (debt), V (E+D), r_e, r_d, tax T, growth g.</aside>
+        </section>
+
         <section>
-          <p>23f3000704@ds.study.iitm.ac.in</p>
-          <h2>Q3 2025 Quarterly Earnings</h2>
-          <h4>Interactive Financial Overview</h4>
-          <p class="brand">Global Banking & Markets Division</p>
-          <p class="email">
-            Prepared by: <strong>Technical Consultant</strong><br />
-            <span>23f3000704@ds.study.iitm.ac.in</span>
-          </p>
-
-          <aside class="notes">
-            Welcome everyone. This deck is built with RevealJS to demonstrate
-            interactive presentation capabilities for our quarterly earnings
-            review. I’ll show live-style charts, code, and formulas—things you
-            can’t do in a static PDF.
-          </aside>
+          <h2>Thank You</h2>
+          <p>Questions? Reach me at 23f3004293@ds.study.iitm.ac.in</p>
+          <p>Contact Link: <a href="mailto:23f3004293@ds.study.iitm.ac.in">23f3004293@ds.study.iitm.ac.in</a></p>
+          <p class="fragment">Press <kbd>Esc</kbd> for slide overview.</p>
+          <aside class="notes">Wrap up and move to Q&A. Remind audience about the Appendix in the repo.</aside>
         </section>
 
-        <!-- =========================
-             SLIDE 2: AGENDA (FRAGMENTS)
-        ========================== -->
-        <section>
-          <h2>Agenda</h2>
-          <ul>
-            <li class="fragment">Headline financial performance</li>
-            <li class="fragment">Revenue & margin breakdown</li>
-            <li class="fragment">Risk & capital ratios</li>
-            <li class="fragment">Data-driven insights (code & models)</li>
-            <li class="fragment">Next steps for automation</li>
-          </ul>
 
-          <aside class="notes">
-            Use this slide to set expectations. Pause briefly on each bullet as
-            it appears. Emphasize that everything is driven by the same data
-            pipelines used in production reporting.
-          </aside>
-        </section>
+      <!-- Conclusion Slide -->
+      <section>
+        <h2>Conclusion</h2>
+        <ul>
+          <li class="fragment">Strong revenue growth</li>
+          <li class="fragment">Healthy profit margins</li>
+          <li class="fragment">Operational efficiency improved</li>
+        </ul>
+        <aside class="notes">
+          Summarize key takeaways for stakeholders.
+        </aside>
+      </section>
 
-        <!-- =========================
-             SLIDE 3: MARKDOWN SLIDE
-             (REQUIRED: At least one markdown slide)
-        ========================== -->
-        <section data-markdown>
-          <textarea data-template>
-## Q3 Highlights (Markdown Slide)
-
-- **Net Revenue:** \$3.2B  
-- **Net Income:** \$720M  
-- **Cost-to-Income Ratio:** 52%  
-- **ROE:** 14.3%
-
----
-
-### Commentary
-
-- Strong fee-based income from **Wealth Management**
-- **Trading revenue** normalized vs last quarter
-- Expenses stable despite **technology investments**
-          </textarea>
-
-          <aside class="notes">
-            This slide proves we can feed content from Markdown. Mention that
-            this enables programmatic generation of slides from reporting
-            pipelines or notebooks.
-          </aside>
-        </section>
-
-        <!-- =========================
-             SLIDE 4: MATH (FINANCIAL FORMULA)
-        ========================== -->
-        <section>
-          <h2>Financial Formula – Net Present Value (NPV)</h2>
-          <p>We evaluate long-term projects using discounted cash flows:</p>
-
-          <p>
-            \[
-              \text{NPV} = \sum_{t=1}^{T} \frac{CF_t}{(1 + r)^t} - C_0
-            \]
-          </p>
-
-          <ul>
-            <li class="fragment"><strong>\(CF_t\)</strong>: Cash flow at time \(t\)</li>
-            <li class="fragment"><strong>\(r\)</strong>: Discount rate (cost of capital)</li>
-            <li class="fragment"><strong>\(C_0\)</strong>: Initial investment</li>
-          </ul>
-
-          <aside class="notes">
-            Tie this formula directly to a real project decision the bank might
-            make, e.g., rolling out a new digital lending platform. Highlight
-            that these calculations can be automated and surfaced directly in
-            interactive dashboards.
-          </aside>
-        </section>
-
-        <!-- =========================
-             SLIDE 5: CODE + SYNTAX HIGHLIGHTING
-        ========================== -->
-        <section>
-          <h2>Data Pipeline – Earnings Summary (Python)</h2>
-          <pre>
-<code class="language-python" data-line-numbers="1-4|6-11|13-18">
-import pandas as pd
-
-# Load quarterly P&amp;L data
-df = pd.read_csv("q3_earnings.csv")
-
-# Aggregate key metrics
-summary = (
-    df.groupby("segment")
-      .agg(
-          revenue=("revenue", "sum"),
-          net_income=("net_income", "sum"),
-          roe=("roe", "mean"),
-      )
-      .reset_index()
-)
-
-# Flag segments below ROE threshold
-THRESHOLD_ROE = 0.12
-summary["underperforming"] = summary["roe"] &lt; THRESHOLD_ROE
-
-print(summary)
-</code>
-          </pre>
-
-          <aside class="notes">
-            Explain that this is a simplified view of the data pipeline that
-            feeds the slides. You can mention that in reality, this would be
-            wired into a scheduled ETL + quality checks, then exposed through an
-            API or notebook.
-          </aside>
-        </section>
-
-        <!-- =========================
-             SLIDE 6: FRAGMENTS + STACKED VISUAL
-        ========================== -->
-        <section>
-          <h2>Revenue Mix – Year over Year</h2>
-          <p class="kpi">Total Net Revenue: +9.4% YoY</p>
-
-          <div class="r-stack">
-            <div class="fragment">
-              <p><strong>Step 1:</strong> Baseline revenue</p>
-              <img src="images/revenue_step1.png" alt="Baseline revenue" />
-            </div>
-            <div class="fragment">
-              <p><strong>Step 2:</strong> Add Trading &amp; Markets</p>
-              <img src="images/revenue_step2.png" alt="Trading contribution" />
-            </div>
-            <div class="fragment">
-              <p><strong>Step 3:</strong> Add Wealth &amp; Retail</p>
-              <img src="images/revenue_step3.png" alt="Wealth contribution" />
-            </div>
-          </div>
-
-          <aside class="notes">
-            Even if the images are static, the progressive reveal mimics an
-            animated build-up of the chart. This is ideal for guiding attention
-            rather than dumping a busy chart all at once.
-          </aside>
-        </section>
-
-        <!-- =========================
-             SLIDE 7: CLOSING / CONTACT
-        ========================== -->
-        <section>
-          <h2>Next Steps</h2>
-          <ul>
-            <li class="fragment">Automate data refresh from production systems</li>
-            <li class="fragment">Embed predictive risk models in future decks</li>
-            <li class="fragment">Standardize RevealJS templates for all reports</li>
-          </ul>
-
-          <p class="email fragment">
-            Contact: <strong>23f3000704@ds.study.iitm.ac.in</strong>
-          </p>
-
-          <aside class="notes">
-            Close by positioning this approach as a standard for future executive
-            reporting: interactive, data-driven, and reproducible from code.
-          </aside>
-        </section>
-      </div>
     </div>
+  </div>
 
-    <!-- Scripts: Reveal core -->
-    <script src="https://cdn.jsdelivr.net/npm/reveal.js@4.5.0/dist/reveal.js"></script>
+  <!-- Reveal.js & Plugins -->
+  <script src="https://cdn.jsdelivr.net/npm/reveal.js/dist/reveal.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/reveal.js/plugin/markdown/markdown.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/reveal.js/plugin/notes/notes.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/reveal.js/plugin/highlight/highlight.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/reveal.js/plugin/math/math.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
-    <!-- Plugins -->
-    <script src="https://cdn.jsdelivr.net/npm/reveal.js@4.5.0/plugin/markdown/markdown.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/reveal.js@4.5.0/plugin/highlight/highlight.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/reveal.js@4.5.0/plugin/math/math.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/reveal.js@4.5.0/plugin/notes/notes.js"></script>
+  <script>
+    Reveal.initialize({
+      hash: true,
+      slideNumber: true,
+      plugins: [ RevealMarkdown, RevealNotes, RevealHighlight, RevealMath.KaTeX ]
+    });
 
-    <script>
-      Reveal.initialize({
-        width: 1280,
-        height: 720,
-        margin: 0.04,
-        controls: true,
-        progress: true,
-        history: true,
-        center: true,
-        transition: "slide",
-        plugins: [RevealMarkdown, RevealHighlight, RevealMath, RevealNotes],
-        math: {
-          // MathJax 3 default config
-          mathjax:
-            "https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js",
-          tex: {
-            inlineMath: [["\\(", "\\)"]],
-            displayMath: [["\\[", "\\]"]],
-          },
-        },
-      });
-    </script>
-  </body>
+    // Chart.js example for Revenue & Profit
+    const ctx = document.getElementById('revenueChart').getContext('2d');
+    const revenueChart = new Chart(ctx, {
+      type: 'line',
+      data: {
+        labels: ['Q1', 'Q2', 'Q3', 'Q4'],
+        datasets: [
+          { label: 'Revenue ($M)', data: [3.2, 3.8, 4.5, 4.8], borderColor: 'blue', fill: false },
+          { label: 'Profit ($M)', data: [1.2, 1.5, 1.8, 2.0], borderColor: 'green', fill: false }
+        ]
+      },
+      options: {
+        responsive: true,
+        plugins: {
+          legend: { position: 'top' },
+          title: { display: true, text: 'Revenue & Profit by Quarter' }
+        }
+      }
+    });
+  </script>
+</body>
+
 </html>
+
+
+
